@@ -1,3 +1,7 @@
+Coq development:
+- Updated the Flocq library to version 3.4.2.
+
+
 Release 3.9, 2021-05-10
 =======================
 
